--- a/style.css
+++ b/style.css
@@ -21,8 +21,28 @@ body {
   height: 2000px;
 }
 
+nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 5rem;
+  gap: 2rem;
+  padding: 0rem 1rem;
+}
+
+.nav {
+  color: #ddd;
+  text-transform: uppercase;
+  text-decoration: none;
+  transition: all 0.2s ease-in-out;
+}
+
+.nav:hover {
+  color: red;
+}
+
 .hero {
-  height: 100vh;
+  height: calc(100vh - 5rem);
   background-image: linear-gradient(0deg, #0009, #0009), url(./images/hero.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -36,7 +56,7 @@ body {
 }
 
 .title {
-  font-size: 5rem;
+  font-size: 4rem;
   font-family: Lobster, cursive;
 }
 
@@ -61,4 +81,30 @@ body {
 .hero-button:hover {
   background-color: transparent;
   color: red;
+}
+
+@media only screen and (min-width: 600px) {
+  .title {
+    font-size: 4rem;
+    line-height: 4rem;
+  }
+  .subtitle {
+    font-size: 1.5rem;
+  }
+  .hero-button {
+    padding: 1.2rem 2.5rem;
+  }
+  nav {
+    gap: 2rem;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  .title {
+    font-size: 6rem;
+    line-height: 6.5rem;
+  }
+  nav {
+    gap: 4rem;
+  }
 }
