--- a/style.css
+++ b/style.css
@@ -231,6 +231,34 @@ nav {
   gap: 1rem;
 }
 
+.main {
+  height: calc(100vh - 5rem);
+  background-image: linear-gradient(0deg, #0009, #0009), url(./images/hero.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.card {
+  max-width: 800px;
+  margin: 2rem auto;
+  padding: 1rem;
+  background-color: #fff;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.dish {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #ccc;
+  padding: 0.5rem 0;
+  color: #303030;
+}
+
+.dish:last-child {
+  border-bottom: none;
+}
+
 @media only screen and (min-width: 600px) {
   .title {
     font-size: 4rem;
